probado el dht22 funcionando bien

--- a/src/invernadero_esp32/main/CMakeLists.txt
+++ b/src/invernadero_esp32/main/CMakeLists.txt
@@ -5,6 +5,7 @@ idf_component_register(SRCS "main.cpp"
                             "includes/coordinador.cpp" 
                             "includes/fsm.cpp" 
                             "includes/fsm_sustrato.cpp"
+                            "includes/fsm_ambiental.cpp"
                             "includes/actuador_interfaz.cpp" 
                        INCLUDE_DIRS "." "includes")
 
